--- a/index.html
+++ b/index.html
@@ -95,12 +95,18 @@
                 <hr>
             </div>
             <div class="col-sm show" id="6">
+                <img src="assets/photos/buns.png" alt="projects" id="pic">
+                <h3>Clicky Game/React.js</h3>
+                <p class="info">This app was made with React.js & deployed with Heroku. Its a click based game with one of my favorite shows Bob's Burgers.</p>
+                <a href="https://grrrburgerclicks.herokuapp.com/" target="_blank" class="info"><i><u>Click link to visit project</u></i></a>
+            </div>
+            <!-- <div class="col-sm show" id="6">
                 <img src="assets/photos/node-512.png" alt="projects" id="pic">
                 <h3>Liri</h3>
                 <p class="info">This project is called Liri & is a language interpretation & recognition interface. A command line node app that takes in parameters & gives back data.</p>
                 <a href="https://edgarval.github.io/liri-node-app/" target="_blank" class="info"><i><u>Click link to visit project</u></i></a>
                 <hr>
-            </div>
+            </div> -->
         </div>
         <div class="row seconds">
             <div class="col-sm show" id="7">
