--- a/index.html
+++ b/index.html
@@ -32,23 +32,26 @@
 
         <br>
 
-            <div class="row">
-                <div class="col-6 col-md-4">
-                    <h3>About</h3>
-                        <hr>
-                    <p>I'm a Full-Stack Web Developer. Completed my learning & initial training at the University Of Arizona Coding Bootcamp. Looking to further my learning with new skills towards careers in web development.</p>     
-                </div>
-                <div class="col-6 col-md-4">
-                    <h3>What I've Done</h3>
-                        <hr>
-                    <p>At the University of Arizona I worked on many challenging assignments as well as multpile group projects. I became proficient in working in team settings, collaborating with fellow students & taking on the challeneges of a fast paced environment. I've also learned skills outside of the class to broaden my scope & pursue new skills everyday.</p>      
-                </div>
-                <div class="col-6 col-md-4">
-                    <h3>What I do</h3>
-                        <hr>
-                    <p>I'm proficient with HTML, CSS & React. Honed my skills with backend libraries such as Javascript, JQuery & Node. Worked extensively with MySQL & MongoDB databases. I'm pursing skills with algorithms, Java & much more!</p> 
+            <div class="container-fluid text-center">
+                <div class="row" id="bio">
+                    <div class="col-sm col-md-4">
+                        <h3>About</h3>
+                            <hr>
+                        <p>I'm a Full-Stack Web Developer. Completed my learning & initial training at the University Of Arizona Coding Bootcamp. Looking to further my learning with new skills towards careers in web development.</p>     
+                    </div>
+                    <div class="col-sm col-md-4">
+                        <h3>What I've Done</h3>
+                            <hr>
+                        <p>At the University of Arizona I worked on many challenging assignments as well as multpile group projects. I became proficient in working in team settings, collaborating with fellow students & taking on the challeneges of a fast paced environment. I've also learned skills outside of the class to broaden my scope & pursue new skills everyday.</p>      
+                    </div>
+                    <div class="col-sm col-md-4">
+                        <h3>What I do</h3>
+                            <hr>
+                        <p>I'm proficient with HTML, CSS & React. Honed my skills with backend libraries such as Javascript, JQuery & Node. Worked extensively with MySQL & MongoDB databases. I'm pursing skills with algorithms, Java & much more!</p> 
+                    </div>
                 </div>
             </div>
+
         </div>
 
     </div>
