--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous">
     </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-backstretch/2.0.4/jquery.backstretch.min.js"></script>
     <link rel="stylesheet" type="text/css" href="assets/style.css">
 </head>
 <body>
@@ -167,7 +168,7 @@
 </div>
 
 
-
+<script $.backstretch(src="/assets/backstretch.js")></script>
 <script type="text/javascript" src="assets/port.js"></script>
 </body>
 </html>
